// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Headroom should render correct if state is pinned, transition 1`] = `
<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroom__HeaderWrapper
    pinnedToStaticThreshold={0}
    static={false}
    top={0}
    transition="normal"
    translateY={0}
  >
    <div
      className="Headroom__HeaderWrapper-y1kijf-0 dyHkDB"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroom__HeaderWrapper>
  <MockAncestor
    stickyTop={100}
  >
    <div />
  </MockAncestor>
</Headroom>
`;

exports[`Headroom should render correct if state is static, no transition 1`] = `
<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroom__HeaderWrapper
    pinnedToStaticThreshold={0}
    static={true}
    top={-50}
    transition="none"
    translateY={0}
  >
    <div
      className="Headroom__HeaderWrapper-y1kijf-0 joFzCE"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroom__HeaderWrapper>
  <MockAncestor
    stickyTop={50}
  >
    <div />
  </MockAncestor>
</Headroom>
`;

exports[`Headroom should render correct if state is unpinned, no transition 1`] = `
<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroom__HeaderWrapper
    pinnedToStaticThreshold={0}
    static={false}
    top={0}
    transition="none"
    translateY={-50}
  >
    <div
      className="Headroom__HeaderWrapper-y1kijf-0 vOoVV"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroom__HeaderWrapper>
  <MockAncestor
    stickyTop={50}
  >
    <div />
  </MockAncestor>
</Headroom>
`;

exports[`Headroom should render correct if state is unpinned, transition 1`] = `
<Headroom
  height={100}
  pinStart={10}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroom__HeaderWrapper
    pinnedToStaticThreshold={0}
    static={false}
    top={0}
    transition="normal"
    translateY={-50}
  >
    <div
      className="Headroom__HeaderWrapper-y1kijf-0 iddnqB"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroom__HeaderWrapper>
  <MockAncestor
    stickyTop={50}
  >
    <div />
  </MockAncestor>
</Headroom>
`;

exports[`Headroom should render with no stickyAncestor supplied 1`] = `
<Fragment>
  <Headroom__HeaderWrapper
    pinnedToStaticThreshold={0}
    static={true}
    top={-50}
    transition="none"
    translateY={0}
  >
    <MockNode />
  </Headroom__HeaderWrapper>
</Fragment>
`;

exports[`Headroom should render with values from its state 1`] = `
<Headroom
  height={100}
  pinStart={0}
  scrollHeight={50}
  stickyAncestor={<MockAncestor />}
>
  <Headroom__HeaderWrapper
    pinnedToStaticThreshold={0}
    static={true}
    top={-50}
    transition="none"
    translateY={0}
  >
    <div
      className="Headroom__HeaderWrapper-y1kijf-0 joFzCE"
    >
      <MockNode>
        <div />
      </MockNode>
    </div>
  </Headroom__HeaderWrapper>
  <MockAncestor
    stickyTop={50}
  >
    <div />
  </MockAncestor>
</Headroom>
`;
